; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_pod.c_pod_set_finish.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_pod.c_pod_set_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.device_attribute = type { i32 }
%struct.usb_interface = type { i32 }
%struct.usb_line6_pod = type { i32 }

@POD_SYSEX_FINISH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.device*, %struct.device_attribute*, i8*, i64)* @pod_set_finish to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @pod_set_finish(%struct.device* %0, %struct.device_attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.device*, align 8
  %7 = alloca %struct.device_attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.usb_interface*, align 8
  %11 = alloca %struct.usb_line6_pod*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  store %struct.device* %0, %struct.device** %6, align 8
  store %struct.device_attribute* %1, %struct.device_attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %14 = load %struct.device*, %struct.device** %6, align 8
  %15 = call %struct.usb_interface* @to_usb_interface(%struct.device* %14)
  store %struct.usb_interface* %15, %struct.usb_interface** %10, align 8
  %16 = load %struct.usb_interface*, %struct.usb_interface** %10, align 8
  %17 = call %struct.usb_line6_pod* @usb_get_intfdata(%struct.usb_interface* %16)
  store %struct.usb_line6_pod* %17, %struct.usb_line6_pod** %11, align 8
  store i32 0, i32* %12, align 4
  %18 = load %struct.usb_line6_pod*, %struct.usb_line6_pod** %11, align 8
  %19 = load i32, i32* @POD_SYSEX_FINISH, align 4
  %20 = load i32, i32* %12, align 4
  %21 = call i8* @pod_alloc_sysex_buffer(%struct.usb_line6_pod* %18, i32 %19, i32 %20)
  store i8* %21, i8** %13, align 8
  %22 = load i8*, i8** %13, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %25, label %24

24:                                               ; preds = %4
  store i64 0, i64* %5, align 8
  br label %34

25:                                               ; preds = %4
  %26 = load %struct.usb_line6_pod*, %struct.usb_line6_pod** %11, align 8
  %27 = getelementptr inbounds %struct.usb_line6_pod, %struct.usb_line6_pod* %26, i32 0, i32 0
  %28 = load i8*, i8** %13, align 8
  %29 = load i32, i32* %12, align 4
  %30 = call i32 @line6_send_sysex_message(i32* %27, i8* %28, i32 %29)
  %31 = load i8*, i8** %13, align 8
  %32 = call i32 @kfree(i8* %31)
  %33 = load i64, i64* %9, align 8
  store i64 %33, i64* %5, align 8
  br label %34

34:                                               ; preds = %25, %24
  %35 = load i64, i64* %5, align 8
  ret i64 %35
}

declare dso_local %struct.usb_interface* @to_usb_interface(%struct.device*) #1

declare dso_local %struct.usb_line6_pod* @usb_get_intfdata(%struct.usb_interface*) #1

declare dso_local i8* @pod_alloc_sysex_buffer(%struct.usb_line6_pod*, i32, i32) #1

declare dso_local i32 @line6_send_sysex_message(i32*, i8*, i32) #1

declare dso_local i32 @kfree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
